--- a/Systolic Array (dynamic)/NPU_Wrapper.qsf
+++ b/Systolic Array (dynamic)/NPU_Wrapper.qsf
@@ -38,16 +38,24 @@
 
 set_global_assignment -name FAMILY "Cyclone V"
 set_global_assignment -name DEVICE 5CSEMA5F31C6
-set_global_assignment -name TOP_LEVEL_ENTITY NPU_Wrapper
+set_global_assignment -name TOP_LEVEL_ENTITY Nios_System_2A
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 18.1.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "20:15:40  SEPTEMBER 25, 2025"
 set_global_assignment -name LAST_QUARTUS_VERSION "18.1.0 Lite Edition"
+set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
+set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
+set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
+set_global_assignment -name ERROR_CHECK_FREQUENCY_DIVISOR 256
+set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
+set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
+set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
+set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
+set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_global_assignment -name QIP_FILE Nios_System_2A/synthesis/Nios_System_2A.qip
+set_global_assignment -name VHDL_FILE Nios_System_2A/synthesis/Nios_System_2A.vhd
 set_global_assignment -name VHDL_FILE top_level_systolic_array.vhd
 set_global_assignment -name VHDL_FILE systolic_array.vhd
 set_global_assignment -name VHDL_FILE processing_element.vhd
 set_global_assignment -name VHDL_FILE custom_types.vhd
 set_global_assignment -name VHDL_FILE control_unit.vhd
-set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
-set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
-set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
-set_global_assignment -name ERROR_CHECK_FREQUENCY_DIVISOR 256
+set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
