--- a/Final/quartus/final.qsf
+++ b/Final/quartus/final.qsf
@@ -38,20 +38,26 @@
 
 set_global_assignment -name FAMILY "Cyclone V"
 set_global_assignment -name DEVICE 5CSEMA5F31C6
-set_global_assignment -name TOP_LEVEL_ENTITY top_level_systolic_array
+set_global_assignment -name TOP_LEVEL_ENTITY npu_wrapper
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 18.1.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "21:53:21  SEPTEMBER 30, 2025"
 set_global_assignment -name LAST_QUARTUS_VERSION "18.1.0 Lite Edition"
+set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
+set_global_assignment -name BOARD "DE1-SoC Board"
+set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
+set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
+set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
+set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
+set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
+set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
+set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_global_assignment -name SDC_FILE npu_constraints.sdc
+set_global_assignment -name VHDL_FILE "../Systolic Array/npu_wrapper.vhd"
 set_global_assignment -name VHDL_FILE "../Systolic Array/top_level_systolic_array.vhd"
 set_global_assignment -name VHDL_FILE "../Systolic Array/systolic_array.vhd"
 set_global_assignment -name VHDL_FILE "../Systolic Array/processing_element.vhd"
 set_global_assignment -name VHDL_FILE "../Systolic Array/custom_types.vhd"
 set_global_assignment -name VHDL_FILE "../Systolic Array/control_unit.vhd"
-set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
-set_global_assignment -name BOARD "DE1-SoC Board"
 set_global_assignment -name QIP_FILE data_rom.qip
 set_global_assignment -name QIP_FILE weight_rom.qip
-set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
-set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
-set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
