--- a/Final/quartus/final.qsf
+++ b/Final/quartus/final.qsf
@@ -71,6 +71,13 @@ set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to LEDR[6]
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to LEDR[7]
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to LEDR[8]
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to LEDR[9]
+set_location_assignment PIN_AC18 -to FPGA_UART_RX
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to FPGA_UART_RX
+set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
+set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
+set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_global_assignment -name BOARD "DE1-SoC Board"
+set_global_assignment -name BDF_FILE ALL.bdf
 set_global_assignment -name VHDL_FILE UART.vhd
 set_global_assignment -name VHDL_FILE TX.vhd
 set_global_assignment -name VHDL_FILE RX.vhd
@@ -85,10 +92,8 @@ set_global_assignment -name QIP_FILE data_rom.qip
 set_global_assignment -name QIP_FILE weight_rom.qip
 set_global_assignment -name VHDL_FILE de1_soc_top.vhd
 set_global_assignment -name VHDL_FILE debouncer.vhd
-set_location_assignment PIN_AC18 -to FPGA_UART_RX
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to FPGA_UART_RX
-set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
-set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
-set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
-set_global_assignment -name BOARD "DE1-SoC Board"
+set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
+set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
+set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
+set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
